IPP/projects/IPP-test.php-master/int-only/vyzi_tests/should-fail/createframe1.src
<?xml version="1.0" encoding="UTF-8"?>
<program language="IPPcode19">
	<instruction order="1" opcode="CREATEFRAME">
		<arg1 type="var">GF@antuh</arg1>
	</instruction>
</program>
